--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2>代表專案</h2>
       <div class="grid-2">
         <div class="item">
-          <h3>水花辨識投喂系統</h3>
+          <h3>水花辨識投餵系統</h3>
           <ul>
             <li><b>技術實作</b>：開發嵌入式系統將舊料桶連網，整合影像串流與雲端分析。</li>
             <li><b>技術文件與專利</b>：撰寫「智慧餵食強度辨識」專利技術文件。</li>
