--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <h3>教學助教（TA）｜國立臺灣海洋大學</h3>
           <div class="meta">2023 – 2025</div>
           <ul>
-            <li><b>系統維運與支援</b>：課程技術協助與作業指導（Python、機器學習）。</li>
+            <li><b>TA</b>：課程技術協助與作業指導（Python、機器學習、C語言程式設計）。</li>
           </ul>
         </div>
       </div>
