--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="meta">2020/05 – 2020/08｜台南｜Unity3D / C#</div>
           <ul>
             <li><b>技術實作</b>：使用 Unity3D 與 C# 開發應用程式。</li>
-            <li><b>技術文件與專利</b>：協助研究報告與專案文件撰寫。</li>
+            <li><b>文書作業</b>：協助研究報告與專案文件撰寫。</li>
           </ul>
         </div>
         <div class="item">
