--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>自我介紹履歷｜姜楷成</title>
-<meta name="description" content="結構化且互動的個人履歷，適合HR與技術主管快速了解技能與經歷。">
+<meta name="description" content="自我介紹履歷｜姜楷成">
 <style>
   :root{
     --bg:#ffffff; --fg:#111827; --muted:#6b7280; --accent:#2563eb; --chip:#eef2ff; --line:#e5e7eb;
@@ -140,7 +140,7 @@
       </div>
     </section>
 
-    <div class="footer">© 2025 姜楷成 — 單頁履歷（列印友善 / 支援深色模式 / 手機優化 / 結構化）</div>
+    <div class="footer">© 2025 姜楷成 — vip.johnson880017@gmail.com）</div>
   </div>
 </body>
 </html>
