--- a/index.html
+++ b/index.html
@@ -143,4 +143,13 @@
     <div class="footer">© 2025 姜楷成 — vip.johnson880017@gmail.com）</div>
   </div>
 </body>
+  <p>
+  <a href="./boids_obstacles.html" style="
+     display:inline-block;padding:.6rem 1rem;border-radius:10px;
+     border:1px solid #2a3a50;text-decoration:none;
+     background:linear-gradient(180deg,#1a2736 0%,#121b26 100%);
+     color:#e8eef7;">
+    2D 鳥群＋障礙物 Demo
+  </a>
+</p>
 </html>
