--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </div>
 </body>
   <p>
-  <a href="./boids_obstacles.html" style="
+  <a href="./bird.html" style="
      display:inline-block;padding:.6rem 1rem;border-radius:10px;
      border:1px solid #2a3a50;text-decoration:none;
      background:linear-gradient(180deg,#1a2736 0%,#121b26 100%);
